Email On Push html template includes links to project, commits and diff

--- a/app/views/notify/repository_push_email.html.haml
+++ b/app/views/notify/repository_push_email.html.haml
@@ -1,11 +1,14 @@
-%h3 #{@author.name} pushed to #{@branch} at #{@project.name_with_namespace}
+%h3 #{@author.name} pushed to #{@branch} at #{link_to @project.name_with_namespace, project_url(@project)}
 
 %h4 Commits:
 
 %ul
   - @commits.each do |commit|
     %li
-      #{commit.short_id} - #{commit.title}
+      #{link_to commit.short_id, project_commit_url(@project, commit)} - #{commit.title}
+
+%div
+  = link_to 'View diff at GitLab', @target_url
 
 %h4 Changes:
 - @diffs.each do |diff|
