Email On Push html template includes full commits messages and links to project, commits, compare

--- a/app/views/notify/repository_push_email.html.haml
+++ b/app/views/notify/repository_push_email.html.haml
@@ -1,11 +1,16 @@
-%h3 #{@author.name} pushed to #{@branch} at #{@project.name_with_namespace}
+%h3 #{@author.name} pushed to #{@branch} at #{link_to @project.name_with_namespace, project_url(@project)}
 
 %h4 Commits:
 
 %ul
   - @commits.each do |commit|
     %li
-      #{commit.short_id} - #{commit.title}
+      = link_to commit.short_id, project_commit_url(@project, commit)
+      \ - #{ simple_format commit.safe_message, {}, wrapper_tag: 'span' }
+
+- if @commits.size > 1
+  %div
+    = link_to 'View commits compare', @target_url
 
 %h4 Changes:
 - @diffs.each do |diff|
